# paper-muncher

./: .gdbinit  .gitattributes  .gitignore  changelog.md  ck  code-of-conduct.md  index.html  index.md  index.xhtml  input.html  license.md  playground.html  project.json  readme.md  test.html  todo.md  vaev.sh
meta/bindings/python/: README.md  papermuncher.py  pyproject.toml  sample.py  test.css
meta/bindings/python/.doctrees/: environment.pickle  examples.doctree  framework_examples.doctree  index.doctree  readme.doctree
meta/bindings/python/documentation_source/: conf.py  examples.rst  framework_examples.rst  readme.rst
meta/bindings/python/examples/: async_cm_example.py  async_example.py  auto_mode_cm_example.py  auto_mode_example.py  django_asgi_example.py  django_wsgi_example.py  fastapi_example.py  flask_example.py  quart_example.py  sync_cm_example.py  sync_example.py
meta/bindings/python/paper_muncher/: __init__.py  binary.py  typing.py
meta/bindings/python/paper_muncher/asynchronous/: __init__.py  asyncify.py  interface.py  io_with_timeout.py  popen.py  request.py
meta/bindings/python/paper_muncher/autochronous/: __init__.py  interface.py  proxy.py
meta/bindings/python/paper_muncher/frameworks/: __init__.py  asgi_app.py  django_asgi.py  django_wsgi.py  fastapi.py  flask.py  quart.py  wsgi_app.py
meta/bindings/python/paper_muncher/runners/: asgi.py  wsgi.py
meta/bindings/python/papermuncher/: __init__.py  __main__.py  _internal.py  binding.py  bindings.py  communication.py  environ.py  exceptions.py  options.py  renderer.py  types.py  utils.py
(+1382 files in other folders)
